# Python-web-techs-lab4-5

./: pyproject.toml
src/: db.sqlite3
src/app/: asgi.py  settings.py  wsgi.py
src/main/: admin.py  models.py  urls.py  views.py
src/main/migrations/: 0001_initial.py  0002_auto_20240427_1853.py  0002_auto_20240427_2302.py
src/main/static/css/: styles.css
src/main/templates/: base.html  home.html  login.html  signup.html
